[PRG] Pinata Chest + Static Chest
Pinata :

- Le Pinata Chest a maintenant une animation indiquant que le Coffre a effectivement reçu un coup.

- Animation sur le texte aussi, proche de celle du coup reçu, pour que le tout soit un peu plus dynamique.

Static :

- Ajout d'un son indiquant que l'objet a été validé, et donc qu'il n'y a plus d'argent à gagner.

- Modification de la logique : si un joueur se tient seul sur le bouton, celui-ci s'illumine, mais le coffre ne monte ni ne descend.

- Le coffre monte très lentement si plus de 2 joueurs se tiennent sur le bouton, afin de permettre un très léger avantage tactique à empêcher les joueurs de valider le coffre (en attendant son allié par exemple). La remontée est suffisamment lente pour éviter les situations d'anti-jeu normalement.

Logique Level, pas encore fait mais prévu :

- Timeline pour faire descendre les escaliers de la plateforme principale sur "Fin Docks".

- Sur Fin Docks aussi, utilisation du même son que pour la Thunderstorm afin d'indiquer la fin de partie, et surtout l'arrivée des requins (Signe déjà présent sur le Crâne).

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,8 +87,11 @@ LastLevel=/Game/GaetanLD/GC_MicroLevelv3
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/EveryoneProg/Treasures/BP_TreasureTree.BP_TreasureTree
-OpenAssetsAtExit=/Game/GaetanLD/LevelSequence/FinDocksOpenSharkGates.FinDocksOpenSharkGates
+OpenAssetsAtExit=/Game/EveryoneProg/Treasures/BP_MagicChestPinata.BP_MagicChestPinata
 OpenAssetsAtExit=/Game/EveryoneProg/Events/BP_StoneSkull.BP_StoneSkull
+OpenAssetsAtExit=/Game/ArtAndMusic/Art/TimelineCurves/SkullJumpScale.SkullJumpScale
+OpenAssetsAtExit=/Game/EveryoneProg/Treasures/BP_MagicChestStatic.BP_MagicChestStatic
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -140,8 +143,7 @@ SelectedSplinePointSizeAdjustment=0.000000
 SplineLineThicknessAdjustment=0.000000
 SplineTangentHandleSizeAdjustment=0.000000
 SplineTangentScale=1.000000
-GridEnabled=False
-CurrentPosGridSize=5
+CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/GaetanLD/GC_MicroLevelv3
@@ -202,7 +204,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/GaetanLD
+ContentBrowserTab1.SelectedPaths=/Game/ArtAndMusic/Art/TorusPlayerMat
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -1520,26 +1522,26 @@ Volume=BlockingVolume.Collision.Collision,StaticMeshActor.Collision.Collision,St
 Pawn=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Utilities.Transformation.Collision,TestUIScreen_C.SceneCapture.Advanced Show Flags,TestUIScreen_C.SceneCapture.General Show Flags,TestUIScreen_C.SceneCapture.Post Processing Show Flags,TestUIScreen_C.SceneCapture.Light Types Show Flags,TestUIScreen_C.SceneCapture.Lighting Components Show Flags,TestUIScreen_C.SceneCapture.Lighting Features Show Flags,TestUIScreen_C.SceneCapture.Hidden Show Flags,CapsuleComponent.Physics.ConstraintsGroup,K2Node_CustomEvent.Inputs.InputArgument1,Emitter.Rendering.TextureStreaming,Emitter.Rendering.LOD,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,TargetPoint.Collision.Collision,PrimitiveComponent.Collision.Collision,BP_WaterVolume_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GaetanLD/LevelSequence/FinDocksOpenSharkGates
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem1=/Game/EveryoneProg/Treasures/BP_MagicChestStatic
-MRUItem2=/Game/GaetanLD/GC_MicroLevelv3
-MRUItem3=/Game/MaximeLD/LevelMax_final_day
-MRUItem4=/Game/MaximeLD/LevelMax_final_night
-MRUItem5=/Game/EveryoneProg/Dangers/AI_Shark
-MRUItem6=/Game/EveryoneProg/Treasures/BP_MagicChestPinata
-MRUItem7=/Game/EveryoneProg/Events/BP_StoneSkull
-MRUItem8=/Game/EveryoneProg/Events/PvE/ThunderCaller
-MRUItem9=/Game/EveryoneProg/Treasures/BP_TreasureTree
-MRUItem10=/Game/GaetanLD/GC_MicroLevelv2
-MRUItem11=/Game/EveryoneProg/Treasures/BP_IntroSloop
-MRUItem12=/Game/EveryoneProg/Art/BP_Sand
-MRUItem13=/Game/EveryoneProg/Deliveries/BP_GoldBag_WithGrab
-MRUItem14=/Game/EveryoneProg/Dangers/RedBarrel
-MRUItem15=/Game/EveryoneProg/Managers/BP_CoinSpawner
-MRUItem16=/Game/EveryoneProg/Managers/BP_Trig_CoinPusher
-MRUItem17=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem18=/Game/EveryoneProg/Deliveries/BP_WS_CursedChalice2P
-MRUItem19=/Game/EveryoneProg/Treasures/BP_MagicChestCarry
+MRUItem2=/Game/ArtAndMusic/Art/TimelineCurves/SkullJumpScale
+MRUItem3=/Game/EveryoneProg/Treasures/BP_MagicChestPinata
+MRUItem4=/Game/GaetanLD/GC_MicroLevelv3
+MRUItem5=/Game/EveryoneProg/Events/BP_StoneSkull
+MRUItem6=/Game/GaetanLD/LevelSequence/FinDocksOpenSharkGates
+MRUItem7=/Game/EveryoneProg/Treasures/BP_TreasureTree
+MRUItem8=/Game/MaximeLD/LevelMax_final_day
+MRUItem9=/Game/MaximeLD/LevelMax_final_night
+MRUItem10=/Game/EveryoneProg/Dangers/AI_Shark
+MRUItem11=/Game/EveryoneProg/Events/PvE/ThunderCaller
+MRUItem12=/Game/GaetanLD/GC_MicroLevelv2
+MRUItem13=/Game/EveryoneProg/Treasures/BP_IntroSloop
+MRUItem14=/Game/EveryoneProg/Art/BP_Sand
+MRUItem15=/Game/EveryoneProg/Deliveries/BP_GoldBag_WithGrab
+MRUItem16=/Game/EveryoneProg/Dangers/RedBarrel
+MRUItem17=/Game/EveryoneProg/Managers/BP_CoinSpawner
+MRUItem18=/Game/EveryoneProg/Managers/BP_Trig_CoinPusher
+MRUItem19=/Game/EveryoneProg/Deliveries/BP_WS_CursedChalice2P
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -5847,7 +5849,7 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Shape.ShapeColor\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
@@ -5862,11 +5864,11 @@ StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.Li
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
-K2Node="\"Object.PinOptions.PinNames\" "
+K2Node=
 EdGraphNode=
 ThirdPersonCharacter_C=
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.Default.TargetPointArray\" "
+Character=
+Pawn=
 BlockingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase="\"Object.Minutes\" "
@@ -5937,7 +5939,7 @@ CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Rendering.OverrideMaterial
 MaterialEditorInstanceConstant=
 PhysicsConstraintComponent="\"Object.Constraint.ComponentName1\" \"Object.Constraint.ComponentName2\" \"Object.ConstraintComponent.ConstraintInstance.AngularRotationOffset\" \"Object.Tags.ComponentTags\" "
 K2Node_SwitchName="\"Object.PinOptions.PinNames\" "
-K2Node_Switch="\"Object.PinOptions.PinNames\" "
+K2Node_Switch=
 BP_InputReceiver_C=
 SpawnInputReceivers_3="\"Struct.NewLocalVar_0\" "
 SpawnInputReceivers="\"Struct.Index\" "
