[PRG + LD] Correctif Calice + micro modif LD
Calice :

- Ajout d'un Helper sur les Players, position utilisée pour déplacer le Calice.

- Lorsque le Calice est déplacé par un seul joueur, il se placera sur la position du Helper. Ce changement devrait permettre aux autres joueurs de plus facilement attraper le Calice, tout en permettant aux joueurs seuls de le déplacer.

Coin Spawner :

- Ajout d'une nouvelle variable de comportement : Spawn at Start. Permet de faire apparaître des pièces dès l'instantiation de l'objet, si cochée Vraie.

- Maintenant, le Coin Spawner se détruit si la case "Spawn Only Once" est cochée, quelque soit le moment où les pièces sont instanciées. Par exemple, on peut faire apparaître des pièces 25sec après le début de la partie, une seule fois.

- Modification des objets instanciant le Coin Spawner, afin d'éviter des situations de spawn infinis sur les Arbres à Trésor ou sur le Monticule notamment.

Wrecked Ship (Day) :

- Ajout du challenge du Crâne de Pierre : marcher sur les deux plaques de pression ouvre les dents du Crâne.

- Ajout d'une animation sur les dents (en FP) et de Rumbles (en FP) pour l'ouverture du Crâne.

- Ajout de deux petites torches dynamiques à côté des plaques de pression. Surtout là parce que sans elles, la plaque de pression casse. On peut toujours les cacher sous le level si on ne veut pas donner d'indication aux players !

- Correction d'un bug sur le Level Blueprint : les objets de la zone d'intro n'étaient plus supprimés, empêchant par la même occasion de faire spawn de nouveaux Calices.

--- a/Saved/Config/Windows/Input.ini
+++ b/Saved/Config/Windows/Input.ini
@@ -2,5 +2,6 @@
 HistoryBuffer=DebugSkipIntro
 HistoryBuffer=CE D
 HistoryBuffer=ce deb
+HistoryBuffer=ce CleanUpIntro
 HistoryBuffer=ce Debug_SkipIntro
 
