[LD + S&F] Rumbles + Coin Spawner & Chalice
- Modifications d'hier soir juste avant le cours intégrées ici (Spawn at Start sur les Spawners, Chalice qui ne donne plus de pièces d'or...)

- Ajout de Rumble sur validation du Cursed Chalice et du Gold Bag. Normalement, les Rumbles ne se jouent que pour les joueurs concernés.

- Modification du Rumble lors de l'ouverture d'une zone secrète, afin qu'il soit moins violent.

- Ajout pour le test : Manette sur Pause Menu, pour donner une idée de la taille qu'on pourrait avoir. Une version blanche de la manette est aussi sur le projet.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -30,3 +30,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=Never
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
