[ART] Fx Spawner

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BBTB
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MaximeLD/LevelMax_final_night.LevelMax_final_night
+EditorStartupMap=/Game/MaximeLD/LevelMax_final_night_v2.LevelMax_final_night_v2
 GameDefaultMap=/Game/Menus/MainMenu.MainMenu
 TransitionMap=None
 bUseSplitscreen=False
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/BP_Gamemode.BP_Gamemode_C
 GlobalDefaultServerGameMode=None
-bOffsetPlayerGamepadIds=True
+bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
