--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -22,6 +22,7 @@ Paths=../../../Engine/Plugins/Editor/SpeedTreeImporter/Content
 Paths=../../../Engine/Plugins/Experimental/MotoSynth/Content
 Paths=../../../Engine/Plugins/Runtime/AudioSynesthesia/Content
 Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
+Paths=../../../Engine/Plugins/VirtualProduction/Takes/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
