[PRG] Chaloupe Fix
Dans les levels blueprints, on fait en sorte de sort les Players dans un array lorsqu'ils spawn pour garder leur ordre dans tous les cas. Cela fait en sorte que les chaloupes ne cassent plus. C'est un hotfix pour les chaloupes car ce bug etait un game breaker mais ca n'affecte pas le probleme en dessous qui affect toujours le score screen a ce moment

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,23 +79,20 @@ ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 NewWindowWidth=2550
 NewWindowHeight=1006
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [EditorStartup]
-LastLevel=/Game/MaximeLD/LevelMax_final_day_v2
+LastLevel=/Game/MaximeLD/LevelMax_final_night_v2
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/EveryoneProg/TriggerTuto.TriggerTuto
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/MaximeLD/LevelMax_final_day_v2.LevelMax_final_day_v2:PersistentLevel.LevelMax_final_day_v2
 OpenAssetsAtExit=/Game/EveryoneProg/Managers/ScoreManager.ScoreManager
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores.WBP_PlayerScores
-OpenAssetsAtExit=/Game/JonathanPRG/UI/Timer.Timer
 OpenAssetsAtExit=/Game/EveryoneProg/BP_PressurePlate.BP_PressurePlate
 OpenAssetsAtExit=/Game/EveryoneProg/Dangers/RedBarrel.RedBarrel
-OpenAssetsAtExit=/Game/EveryoneProg/Dangers/AI_Shark.AI_Shark
+OpenAssetsAtExit=/Game/Menus/WBP_MapMenu.WBP_MapMenu
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -153,15 +150,15 @@ CurrentPosGridSize=0
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/MaximeLD/LevelMax_final_day_v2
-MRUItem1=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
-MRUItem2=/Game/MaximeLD/LevelMax_final_night_v2
-MRUItem3=/Game/ThirdPersonBP/Maps/ScoreScreen
-MRUItem4=/Game/ThirdPersonBP/Maps/LevelMax_final_day_Cinematic
-MRUItem5=/Game/Menus/MapMenu
-MRUItem6=/Game/Menus/HowToPlayMenu
-MRUItem7=/Game/Menus/MainMenu
-MRUItem8=/Game/Menus/MiniTeaser
+MRUItem0=/Game/MaximeLD/LevelMax_final_night_v2
+MRUItem1=/Game/MaximeLD/LevelMax_final_day_v2
+MRUItem2=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
+MRUItem3=/Game/Menus/MapMenu
+MRUItem4=/Game/Menus/MiniTeaser
+MRUItem5=/Game/ThirdPersonBP/Maps/ScoreScreen
+MRUItem6=/Game/ThirdPersonBP/Maps/LevelMax_final_day_Cinematic
+MRUItem7=/Game/Menus/HowToPlayMenu
+MRUItem8=/Game/Menus/MainMenu
 MRUItem9=/Game/MaximeLD/LevelMax_final_day
 MRUItem10=/Game/ThirdPersonBP/Maps/RumOnTheRocks_BIGGER_Rev12_NewChests
 MRUItem11=/Game/MaximeLD/LevelMax_final_afternoon_WithShark
@@ -223,7 +220,7 @@ AssetManagementBrowser.ThumbnailSizeScale=0.100000
 AssetManagementBrowser.CurrentViewType=2
 AssetManagementBrowser.HiddenColumns=Class
 AssetManagementBrowser.HiddenColumns=Path
-ContentBrowserTab1.SelectedPaths=/Game/JonathanPRG/UI
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=0.000
@@ -245,7 +242,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/MaximeLD
+UNR=H:/Fork/Bone_To_Be_Bad/Content/MaximeLD
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1055,7 +1052,7 @@ Voice.TimeStamp=2021.03.10-02.11.58
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.03.10-02.11.53
 MovieSceneCapture.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2021.03.08-16.20.26
+HierarchicalLODUtilities.TimeStamp=2021.03.10-02.11.51
 HierarchicalLODUtilities.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.03.10-02.11.51
 ExternalImagePicker.LastCompileMethod=External
@@ -1544,7 +1541,7 @@ Pawn=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.
 LevelMax_final_night_C=
 ScoreScreen_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Utilities.Transformation.Collision,CapsuleComponent.Physics.ConstraintsGroup,K2Node_CustomEvent.Inputs.InputArgument1,TestUIScreen_C.SceneCapture.Advanced Show Flags,TestUIScreen_C.SceneCapture.General Show Flags,TestUIScreen_C.SceneCapture.Post Processing Show Flags,TestUIScreen_C.SceneCapture.Light Types Show Flags,TestUIScreen_C.SceneCapture.Lighting Components Show Flags,TestUIScreen_C.SceneCapture.Lighting Features Show Flags,TestUIScreen_C.SceneCapture.Hidden Show Flags,Emitter.Rendering.TextureStreaming,Emitter.Rendering.LOD,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,TargetPoint.Collision.Collision,PrimitiveComponent.Collision.Collision,BP_WaterVolume_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 BP_WS_CaliceWithRopeTest_C=
-LevelMax_final_day_v2_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Utilities.Transformation.Collision,CapsuleComponent.Physics.ConstraintsGroup,K2Node_CustomEvent.Inputs.InputArgument1,TestUIScreen_C.SceneCapture.Advanced Show Flags,TestUIScreen_C.SceneCapture.General Show Flags,TestUIScreen_C.SceneCapture.Post Processing Show Flags,TestUIScreen_C.SceneCapture.Light Types Show Flags,TestUIScreen_C.SceneCapture.Lighting Components Show Flags,TestUIScreen_C.SceneCapture.Lighting Features Show Flags,TestUIScreen_C.SceneCapture.Hidden Show Flags,Emitter.Rendering.TextureStreaming,Emitter.Rendering.LOD,TargetPoint.Physics.ConstraintsGroup,TargetPoint.Rendering.TextureStreaming,TargetPoint.Rendering.LOD,PrimitiveComponent.Collision.Collision,TargetPoint.Collision.Collision,BP_WaterVolume_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Preview,K2Node_MakeStruct.PinOptions.ShowPinForProperties,CineCameraActor.PostProcess.Lens,K2Node_FunctionEntry.Inputs.InputArgument0,
+LevelMax_final_day_v2_C=
 ForceFeedbackComponent=
 PaperSpriteComponent=
 LevelMax_final_day_WithShark_C=
@@ -1565,28 +1562,30 @@ FakeSkeletonDelivery_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCo
 CharSelectCharacter_C=
 TakeRecorderProjectSettings=InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Interact,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.PlayerComm,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,
 TriggerTuto_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Utilities.Transformation.Collision,
+LevelMax_final_afternoon_WithSharkV2_C=
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/JonathanPRG/UI/Timer
-MRUItem1=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
-MRUItem2=/Game/EveryoneProg/Managers/ScoreManager
-MRUItem3=/Game/MaximeLD/LevelMax_final_day_v2
-MRUItem4=/Game/EveryoneProg/Dangers/AI_Shark
-MRUItem5=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
-MRUItem6=/Game/VFXapprentice/BoryVFX/FX_Shine
-MRUItem7=/Game/ArtAndMusic/Art/MaterialDecal/bones_footagain-1
-MRUItem8=/Game/EveryoneProg/Dangers/RedBarrel
-MRUItem9=/Game/ArtAndMusic/Art/MaterialDecal/FootDecal
-MRUItem10=/Game/EveryoneProg/BP_PressurePlate
-MRUItem11=/Game/ArtAndMusic/Art/MaterialDecal/DecalHeadbutt
-MRUItem12=/Game/ArtAndMusic/Art/MaterialDecal/TutoTextDecal
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/MaximeLD/LevelMax_final_night_v2
+MRUItem1=/Game/MaximeLD/LevelMax_final_day_v2
+MRUItem2=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
+MRUItem3=/Game/Menus/MapMenu
+MRUItem4=/Game/ThirdPersonBP/Blueprints/BP_GameInstance
+MRUItem5=/Game/Menus/WBP_MapMenu
+MRUItem6=/Game/EveryoneProg/Dangers/RedBarrel
+MRUItem7=/Game/EveryoneProg/BP_PressurePlate
+MRUItem8=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
+MRUItem9=/Game/EveryoneProg/Managers/ScoreManager
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem11=/Game/Menus/MiniTeaser
+MRUItem12=/Game/EveryoneProg/Dangers/AI_Shark
+MRUItem13=/Game/JonathanPRG/UI/Timer
 MRUItem14=/Game/EveryoneProg/TriggerTuto
-MRUItem15=/Game/ArtAndMusic/DefaultTextMatFaceCam
-MRUItem16=/Game/PolygonPack/PolygonAdventure/Meshes/SM_Bld_Village_HangingCloth_01
-MRUItem17=/Game/PolygonPack/PolygonPirates/Meshes/Props/SM_Prop_Grave_01
-MRUItem18=/Game/MaximeLD/LevelMax_final_night_v2
-MRUItem19=/Game/ThirdPersonBP/Blueprints/BP_GameInstance
+MRUItem15=/Game/VFXapprentice/BoryVFX/FX_Shine
+MRUItem16=/Game/ArtAndMusic/Art/MaterialDecal/bones_footagain-1
+MRUItem17=/Game/ArtAndMusic/Art/MaterialDecal/FootDecal
+MRUItem18=/Game/ArtAndMusic/Art/MaterialDecal/DecalHeadbutt
+MRUItem19=/Game/ArtAndMusic/Art/MaterialDecal/TutoTextDecal
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -6140,6 +6139,10 @@ bHideUnrelatedNodes=False
 /Game/ArtAndMusic/Art/MaterialDecal/FootDecal.FootDecal=1
 /Game/ArtAndMusic/Art/MaterialDecal/TutoTextDecal.TutoTextDecal=1
 /Game/VFXapprentice/BoryVFX/FX_Shine.FX_Shine=1
+/Game/EveryoneProg/TriggerTuto.TriggerTuto=1
+/Game/JonathanPRG/UI/Timer.Timer=1
+/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2.LevelMax_final_afternoon_WithSharkV2:PersistentLevel.LevelMax_final_afternoon_WithSharkV2=1
+/Game/MaximeLD/LevelMax_final_night_v2.LevelMax_final_night_v2:PersistentLevel.LevelMax_final_night_v2=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/EveryoneProg/TriggerTuto.TriggerTuto;
@@ -6381,9 +6384,9 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
-ThirdPersonCharacter_C="\"Object.Coins\" "
-Character="\"Object.Coins\" "
-Pawn="\"Object.Coins\" "
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 BlockingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase=
@@ -6409,7 +6412,7 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Lo
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 KillerRake_C=
 RumOnTheRocks_C=
-LevelScriptActor="\"Object.introtextFinished\" "
+LevelScriptActor="\"Object.DebugPlay\" "
 WaterChore_Patrons_C=
 BeerMug_C=
 SoundAttenuation="\"Object.Settings.Attenuation.PluginSettings\" "
@@ -6463,8 +6466,8 @@ NavigationObjectBase=
 BP_Gamemode_C=
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.Content.Padding\" \"Object.Appearance.LowQualityFallbackBrush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Visual="\"Object.Content.Padding\" \"Object.Appearance.LowQualityFallbackBrush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_CharacterSelect_C="\"Object.SkinTextArray\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 SpringArmComponent="\"Object.Camera.TargetOffset\" \"Object.Tags.ComponentTags\" "
@@ -6739,7 +6742,7 @@ ForceFeedbackComponent="\"Object.Tags.ComponentTags\" "
 LevelMax_final_night_C="\"Object.DebugPlay\" "
 ScoreScreen_C=
 BP_WS_CaliceWithRopeTest_C=
-LevelMax_final_day_v2_C="\"Object.introtextFinished\" "
+LevelMax_final_day_v2_C="\"Object.DebugPlay\" "
 ActorSequenceComponent="\"Object.Tags.ComponentTags\" "
 LevelMax_final_day_WithShark_C=
 SkeletonDelivery_C=
@@ -6757,7 +6760,7 @@ BP_PlayerTreasureGrab_C=
 WBP_TimerGameStart_C="\"Object.In Color and Opacity\" "
 MainMenu_C=
 SoundBase="\"Object.Duration\" "
-LevelMax_final_night_v2_C=
+LevelMax_final_night_v2_C="\"Object.DebugPlay\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.ModulatedShadowColor\" "
 ExponentialHeightFog="\"Object.ExponentialHeightFog.Component.Object.SecondFogData\" "
 WBP_PauseMenu1_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -6765,6 +6768,7 @@ Font="\"Object.Font\" \"Object.OfflineFont.Characters.Characters[0]\" \"Object.O
 FontFace="\"Object.FontFace\" \"Object.FontFace.SubFaces\" "
 CharSelectCharacter_C=
 TriggerTuto_C=
+LevelMax_final_afternoon_WithSharkV2_C="\"Object.DebugPlay\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
