[POLISH] Credits Modified
Replacés, texte plus grands, couleurs modifiés pour que tout se détache mieux.

(Et le logo artline est 40% plus petit)

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,9 +79,10 @@ ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 NewWindowWidth=2550
 NewWindowHeight=1006
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [EditorStartup]
-LastLevel=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
+LastLevel=/Game/Menus/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -96,6 +97,7 @@ OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance
 OpenAssetsAtExit=/Game/Menus/BP_Button.BP_Button
 OpenAssetsAtExit=/Game/EveryoneProg/Dangers/AI_Shark.AI_Shark
 OpenAssetsAtExit=/Game/EveryoneProg/Events/PvE/ThunderCaller.ThunderCaller
+OpenAssetsAtExit=/Game/Menus/WBP_MainMenu.WBP_MainMenu
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -153,15 +155,15 @@ CurrentPosGridSize=0
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
-MRUItem1=/Game/MaximeLD/LevelMax_final_night_v2
-MRUItem2=/Game/ThirdPersonBP/Maps/ScoreScreen
-MRUItem3=/Game/MaximeLD/LevelMax_final_day_v2
-MRUItem4=/Game/Menus/MapMenu
-MRUItem5=/Game/Menus/MiniTeaser
-MRUItem6=/Game/ThirdPersonBP/Maps/LevelMax_final_day_Cinematic
-MRUItem7=/Game/Menus/HowToPlayMenu
-MRUItem8=/Game/Menus/MainMenu
+MRUItem0=/Game/Menus/MainMenu
+MRUItem1=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
+MRUItem2=/Game/MaximeLD/LevelMax_final_night_v2
+MRUItem3=/Game/ThirdPersonBP/Maps/ScoreScreen
+MRUItem4=/Game/MaximeLD/LevelMax_final_day_v2
+MRUItem5=/Game/Menus/MapMenu
+MRUItem6=/Game/Menus/MiniTeaser
+MRUItem7=/Game/ThirdPersonBP/Maps/LevelMax_final_day_Cinematic
+MRUItem8=/Game/Menus/HowToPlayMenu
 MRUItem9=/Game/MaximeLD/LevelMax_final_day
 MRUItem10=/Game/ThirdPersonBP/Maps/RumOnTheRocks_BIGGER_Rev12_NewChests
 MRUItem11=/Game/MaximeLD/LevelMax_final_afternoon_WithShark
@@ -223,7 +225,7 @@ AssetManagementBrowser.ThumbnailSizeScale=0.100000
 AssetManagementBrowser.CurrentViewType=2
 AssetManagementBrowser.HiddenColumns=Class
 AssetManagementBrowser.HiddenColumns=Path
-ContentBrowserTab1.SelectedPaths=/Game/MaximeLD
+ContentBrowserTab1.SelectedPaths=/Game/Menus
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=0.000
@@ -245,7 +247,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/MaximeLD
+UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/Menus
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1569,26 +1571,26 @@ LevelMax_final_afternoon_WithSharkV2_C=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
-MRUItem1=/Game/EveryoneProg/Events/PvE/ThunderCaller
-MRUItem2=/Game/MaximeLD/LevelMax_final_night_v2
-MRUItem3=/Game/ThirdPersonBP/Maps/ScoreScreen
-MRUItem4=/Game/EveryoneProg/Dangers/AI_Shark
-MRUItem5=/Game/Menus/BP_Button
-MRUItem6=/Game/ThirdPersonBP/Blueprints/BP_GameInstance
-MRUItem7=/Game/Menus/WBP_MapMenu
-MRUItem8=/Game/EveryoneProg/Dangers/RedBarrel
-MRUItem9=/Game/EveryoneProg/BP_PressurePlate
-MRUItem10=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
-MRUItem11=/Game/EveryoneProg/Managers/ScoreManager
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem13=/Game/MaximeLD/LevelMax_final_day_v2
-MRUItem14=/Game/Menus/MapMenu
-MRUItem15=/Game/Menus/MiniTeaser
-MRUItem16=/Game/JonathanPRG/UI/Timer
-MRUItem17=/Game/EveryoneProg/TriggerTuto
-MRUItem18=/Game/VFXapprentice/BoryVFX/FX_Shine
-MRUItem19=/Game/ArtAndMusic/Art/MaterialDecal/bones_footagain-1
+MRUItem0=/Game/Menus/MainMenu
+MRUItem1=/Game/Menus/WBP_MainMenu
+MRUItem2=/Game/EveryoneProg/Events/PvE/ThunderCaller
+MRUItem3=/Game/EveryoneProg/Dangers/AI_Shark
+MRUItem4=/Game/Menus/BP_Button
+MRUItem5=/Game/ThirdPersonBP/Blueprints/BP_GameInstance
+MRUItem6=/Game/Menus/WBP_MapMenu
+MRUItem7=/Game/EveryoneProg/Dangers/RedBarrel
+MRUItem8=/Game/EveryoneProg/BP_PressurePlate
+MRUItem9=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
+MRUItem10=/Game/EveryoneProg/Managers/ScoreManager
+MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem12=/Game/MaximeLD/LevelMax_final_afternoon_WithSharkV2
+MRUItem13=/Game/MaximeLD/LevelMax_final_night_v2
+MRUItem14=/Game/ThirdPersonBP/Maps/ScoreScreen
+MRUItem15=/Game/MaximeLD/LevelMax_final_day_v2
+MRUItem16=/Game/Menus/MapMenu
+MRUItem17=/Game/Menus/MiniTeaser
+MRUItem18=/Game/JonathanPRG/UI/Timer
+MRUItem19=/Game/EveryoneProg/TriggerTuto
 
 [DetailCategories]
 Blueprint_C.Tick=True
